--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -130,5 +130,7 @@
     font-size: 40px!important;
     letter-spacing: 10px;
     line-height: 100px;
+    margin-left:15px;
+    margin-right: 15px;
   }
 }
