Form Margin of Create Account fixed

--- a/src/styles/ClavesSteps.css
+++ b/src/styles/ClavesSteps.css
@@ -101,13 +101,11 @@
 
 .claves-para-exito-button-div {
   text-align: center;
-  /* margin-left: auto;
-  margin-right: auto; */
 }
 
 .claves-para-exito-col-first{
-  margin-left:auto !important;
-  margin-right:auto !important;
+  /* margin-left:auto !important;
+  margin-right:auto !important; */
   width:90%;
 }
 
