--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -85,7 +85,7 @@
     color: #9d9e9f;
     text-decoration: none !important;
     outline:none !important;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 
 @media screen and (max-width: 578px){
